--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-  padding-top: 4.5rem;
 
 }
 
@@ -37,14 +34,24 @@ body > .container {
 }
 
 .footer {
+  margin-top: 200px;
   position: absolute;
   width: 100%;
   min-width: 100%;
   background-color: rgb(233, 236, 239);
   padding-left: 50px;
+  color: #fff;
+  background-color: #333;
+  vertical-align: bottom;
+  padding: 10px 10px 0;
+}
+
+.footer.inner{
+  vertical-align: middle; 
 }
 
 .jumbotron{
+  text-align: left;
   margin-bottom: 20px;
 }
 
@@ -54,29 +61,6 @@ body > .container {
 
 .jumbotron p{
   color: gray;
-}
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: rgb(255,127,39);
-  border-bottom-color: rgb(255,127,39);
 }
 
 .container ul{
@@ -109,6 +93,75 @@ body > .container {
   background-image: url("../images/contato1.jpg");
 }
 
+.quem-somos-background{
+  background-image: url("../images/quem-somos1.jpg");
+}
+
 .card img{
   margin-top: 20px;
+}
+
+.mastfoot {
+  color: rgba(255, 255, 255, .5);
+}
+
+.mastfoot a,
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, .5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: rgb(255,127,39);
+  border-bottom-color: rgb(255,127,39);
+}
+
+.masthead-brand {
+  margin-bottom: 0;
+}
+
+.masthead {
+  margin-bottom: 2rem;
+  color: #fff;
+}
+
+.masthead-brand {
+    float: left;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+.cover-container {
+  width: 100%;
+  background-color: #333;
+}
+
+.inner .logo-img{
+  float: left;
+  padding-top: 5px;
 }
