--- a/css/cover.css
+++ b/css/cover.css
@@ -29,7 +29,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: transparent;
 }
 
 body {
@@ -115,3 +115,15 @@ body {
   float: left;
   padding-top: 5px;
 }
+
+.index-background{
+  background-image: url("../images/index-background.jpg");
+}
+
+.background-images{
+  background-size: 100%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
