--- a/css/cover.css
+++ b/css/cover.css
@@ -121,7 +121,7 @@ body {
 }
 
 .background-images{
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
